Fix overflow dropdown in edge prompt

--- a/src/visualizers/widgets/SemanticGraph/styles/SemanticGraphWidget.scss
+++ b/src/visualizers/widgets/SemanticGraph/styles/SemanticGraphWidget.scss
@@ -14,3 +14,10 @@
     line-height: 0.5;
   }
 }
+
+#edge-prompt {
+  overflow: visible;
+  .modal-body {
+    overflow: visible;
+  }
+}
